--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <h2 class="mb-5">Cources &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
           
         </ul>
