--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="author" content="Affan Ahmed Khan - Full Stack Developer">
 
-  <title>Affan Ahmed Khan</title>
+  <title>Affan Ahmed Khan - Full Stack Developer</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
