--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 
           <div class="col-sm-12 mb-5 col-md-4 col-lg-4">
             <div class="card" style="width: 18rem;">
-              <img src="img/streemie.png" class="card-img-top" alt="...">
+              <img src="img/coinp2p.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title"><a target="_blank" href="http://streemie.com">Streemie</a></h5>
-                <p class="card-text">Blockchain based video platform.</p>
+                <h5 class="card-title"><a target="_blank" href="https://coinp2p.io/">Coin P2P</a></h5>
+                <p class="card-text">Coinp2p is peer to peer platform for cryptocurrency exchange</p>
               </div>
             </div>
           </div>
@@ -351,7 +351,10 @@
       <div class="w-100">
         <h2 class="mb-5">Cources &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
-          
+          <li>  
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <b></b>
+          </li>
         </ul>
       </div>
     </section>
