--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="Affan Ahmed Khan - Full Stack Developer">
+  <link rel="icon" type="image/png" href="/img/favicon.png" />
 
   <title>Affan Ahmed Khan - Full Stack Developer</title>
 
