--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
           <div class="col-sm-12 mb-5 col-md-4 col-lg-4">
             <div class="card" style="width: 18rem;">
-              <img src="img/coinp2p.png" class="card-img-top" alt="...">
+              <img src="img/coinp2p.PNG" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title"><a target="_blank" href="https://coinp2p.io/">Coin P2P</a></h5>
                 <p class="card-text">Coinp2p is peer to peer platform for cryptocurrency exchange</p>
