--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         <h1 class="mb-0">Affan
           <span class="text-primary">Ahmed Khan</span>
         </h1>
-        <div class="subheading mb-5">FullStack Developer<br>
+        <div class="subheading mb-5">Full-Stack Developer<br>
           <a href="mailto:name@email.com">affankhan627@gmail.com</a>
         </div>
-        <p class="lead mb-5">I have over 4 years of experience in web and mobile app development. Worked on diversified projects with cutting edge technologies, learned smart disciplines to develop out of the box applications and Building multiple SaaS products. </p>
+        <p class="lead mb-5">I'm 22 years old Full-Stack Developer having over 4 years of experience in web and mobile app developments and of designing backend architectures, developed from scratch many diverse digital and SaaS products. I'm passionate about learning new technologies and frameworks. </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/affanak/" target="__blank">
             <i class="fab fa-linkedin-in"></i>
@@ -186,8 +186,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Freelancer</h3>
-            <div class="subheading mb-3">At Upwork/Clinets</div>
-            <p>Top Rated with 100% Job Success Freelancer. Worked on various jobs related to Blockchain and Laravel application development.</p>
+            <div class="subheading mb-3">Full-Stack / Blockchain Development</div>
+            <p>I'm working on different projects as a freelancer and delivering quality products.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">December 2018 - Present</span>
@@ -208,7 +208,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">RETINA VR</h3>
-            <div class="subheading mb-3">Developer</div>
+            <div class="subheading mb-3">Full-Stack Developer</div>
             <p>Retina VR provides you the experience of the most immersive way to visualize places with 360 virtual tours at anytime, anywhere and at any place you want.</p>
             
           </div>
