--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="I'm 22 years old Full-Stack Developer having over 4 years of experience in web and mobile app developments and of designing backend architectures, developed from scratch many diverse digital and SaaS products. I'm passionate about learning new technologies and frameworks.">
   <meta name="author" content="Affan Ahmed Khan - Full Stack Developer">
   <link rel="icon" type="image/png" href="img/favicon.png" />
 
