--- a/index.html
+++ b/index.html
@@ -344,9 +344,9 @@
       <div class="w-100">
         <h2 class="mb-5">Cources &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
-          <li>  
+          <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <b></b>
+            <b>Programming with Google Go (Specialization) </b>- University of California, Irvine
           </li>
         </ul>
       </div>
