--- a/index.html
+++ b/index.html
@@ -348,6 +348,10 @@
             <i class="fa-li fa fa-trophy text-warning"></i>
             <b>Programming with Google Go (Specialization) </b>- University of California, Irvine
           </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <b>IBM Blockahain Essentials </b>- IBM
+          </li>
         </ul>
       </div>
     </section>
