--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="I'm 22 years old Full-Stack Developer having over 4 years of experience in web and mobile app developments and of designing backend architectures, developed from scratch many diverse digital and SaaS products. I'm passionate about learning new technologies and frameworks.">
-  <meta name="author" content="Affan Ahmed Khan - Full Stack Developer">
+  <meta name="author" content="Affan Khan - Full Stack Developer">
   <link rel="icon" type="image/png" href="img/favicon.png" />
 
-  <title>Affan Ahmed Khan - Full Stack Developer</title>
+  <title>Affan Khan - Full Stack Developer</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Affan Ahmed Khan</span>
+      <span class="d-block d-lg-none">Affan Khan</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -65,7 +65,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
         <h1 class="mb-0">Affan
-          <span class="text-primary">Ahmed Khan</span>
+          <span class="text-primary"> Khan</span>
         </h1>
         <div class="subheading mb-5">Full-Stack Developer<br>
           <a href="mailto:name@email.com">affankhan627@gmail.com</a>
