--- a/index.html
+++ b/index.html
@@ -172,6 +172,17 @@
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
 
+	<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Codeomatics </h3>
+            <div class="subheading mb-3">CTO</div>
+            <p>Codeomatics is a team of passionate designers and developers providing tech support for scaling E-commerce and SaaS businesses.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2020 - Present</span>
+          </div>
+        </div>
+
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Growth Hopper Pvt. Ltd. </h3>
@@ -179,7 +190,7 @@
             <p>Growth Hopper is a full-service growth hacking & data-driven marketing agency specialized in scaling E-commerce and SaaS businesses.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2019 - Present</span>
+            <span class="text-primary">September 2019 - September 2020</span>
           </div>
         </div>
 
