--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Affan Khan - Full Stack Developer">
   <link rel="icon" type="image/png" href="img/favicon.png" />
 
-  <title>Affan Khan - Full Stack Developer</title>
+  <title>Affan Khan - Blockchain Engineer</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -67,7 +67,7 @@
         <h1 class="mb-0">Affan
           <span class="text-primary"> Khan</span>
         </h1>
-        <div class="subheading mb-5">Full-Stack Developer<br>
+        <div class="subheading mb-5">Blockchain Engineer<br>
           <a href="mailto:name@email.com">affankhan627@gmail.com</a>
         </div>
         <p class="lead mb-5">I'm 22 years old Full-Stack Developer having over 4 years of experience in web and mobile app developments and of designing backend architectures, developed from scratch many diverse digital and SaaS products. I'm passionate about learning new technologies and frameworks. </p>
