--- a/index.html
+++ b/index.html
@@ -70,7 +70,17 @@
         <div class="subheading mb-5">Blockchain Engineer<br>
           <a href="mailto:name@email.com">affankhan627@gmail.com</a>
         </div>
-        <p class="lead mb-5">I'm 22 years old Full-Stack Developer having over 4 years of experience in web and mobile app developments and of designing backend architectures, developed from scratch many diverse digital and SaaS products. I'm passionate about learning new technologies and frameworks. </p>
+        <p class="lead mb-5">
+		
+		Hi, I'm Affan — a 22 years old yound Blockchain & Backend Engineer with 6+ Years of Experience.
+
+		I'm a passionate full-stack engineer with 6+ years of experience building scalable backend systems, secure smart contracts, and production-ready SaaS platforms. I specialize in architecting decentralized applications (dApps), integrating Web3 protocols, and bridging blockchain networks with real-world financial systems.
+		
+		Throughout my journey, I've led the development of several fintech and blockchain products — from tokenization platforms for real-world assets to end-to-end crypto payment gateways and cloud-native SaaS tools. I enjoy working across the stack — whether it's Solidity smart contracts, REST APIs in TypeScript/Golang/PHP, DevOps pipelines, or Web3 authentication flows.
+		
+		Driven by curiosity and innovation, I'm constantly exploring new protocols, infrastructure patterns, and open-source technologies to push the boundaries of what's possible in decentralized tech.
+	
+	</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/affanak/" target="__blank">
             <i class="fab fa-linkedin-in"></i>
