--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="I'm 22 years old Full-Stack Developer having over 4 years of experience in web and mobile app developments and of designing backend architectures, developed from scratch many diverse digital and SaaS products. I'm passionate about learning new technologies and frameworks.">
-  <meta name="author" content="Affan Khan - Full Stack Developer">
+  <meta name="description" content="Hi, I'm Affan — a Blockchain & Backend Engineer with 6+ Years of Experience.">
+  <meta name="author" content="Affan Khan - Blockchain / Backend Engineer">
   <link rel="icon" type="image/png" href="img/favicon.png" />
 
   <title>Affan Khan - Blockchain Engineer</title>
@@ -30,7 +30,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Affan Khan</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/affan.jpeg" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,11 +72,11 @@
         </div>
         <p class="lead mb-5">
 		
-		Hi, I'm Affan — a 22 years old yound Blockchain & Backend Engineer with 6+ Years of Experience.
+		Hi, I'm Affan — a 22 years old yound Blockchain & Backend Engineer with 6+ Years of Experience. <br>
 
-		I'm a passionate full-stack engineer with 6+ years of experience building scalable backend systems, secure smart contracts, and production-ready SaaS platforms. I specialize in architecting decentralized applications (dApps), integrating Web3 protocols, and bridging blockchain networks with real-world financial systems.
+		I'm a passionate full-stack engineer with 6+ years of experience building scalable backend systems, secure smart contracts, and production-ready SaaS platforms. I specialize in architecting decentralized applications (dApps), integrating Web3 protocols, and bridging blockchain networks with real-world financial systems. <br>
 		
-		Throughout my journey, I've led the development of several fintech and blockchain products — from tokenization platforms for real-world assets to end-to-end crypto payment gateways and cloud-native SaaS tools. I enjoy working across the stack — whether it's Solidity smart contracts, REST APIs in TypeScript/Golang/PHP, DevOps pipelines, or Web3 authentication flows.
+		Throughout my journey, I've led the development of several fintech and blockchain products — from tokenization platforms for real-world assets to end-to-end crypto payment gateways and cloud-native SaaS tools. I enjoy working across the stack — whether it's Solidity smart contracts, REST APIs in TypeScript/Golang/PHP, DevOps pipelines, or Web3 authentication flows. <br>
 		
 		Driven by curiosity and innovation, I'm constantly exploring new protocols, infrastructure patterns, and open-source technologies to push the boundaries of what's possible in decentralized tech.
 	
