--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         </div>
         <p class="lead mb-5">
 		
-		Hi, I'm Affan — a 22 years old yound Blockchain & Backend Engineer with 6+ Years of Experience. <br>
+		Hi, I'm Affan — a 22 years old young Blockchain & Backend Engineer with 6+ Years of Experience. <br><br>
 
-		I'm a passionate full-stack engineer with 6+ years of experience building scalable backend systems, secure smart contracts, and production-ready SaaS platforms. I specialize in architecting decentralized applications (dApps), integrating Web3 protocols, and bridging blockchain networks with real-world financial systems. <br>
+		I'm a passionate Full Stack Blockchain Engineer with 6+ years of experience building scalable backend systems, secure smart contracts, and production-ready SaaS platforms. I specialize in architecting decentralized applications (dApps), integrating Web3 protocols, and bridging blockchain networks with real-world financial systems. <br><br>
 		
 		Throughout my journey, I've led the development of several fintech and blockchain products — from tokenization platforms for real-world assets to end-to-end crypto payment gateways and cloud-native SaaS tools. I enjoy working across the stack — whether it's Solidity smart contracts, REST APIs in TypeScript/Golang/PHP, DevOps pipelines, or Web3 authentication flows. <br>
 		
