--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	
 	</p>
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/affanak/" target="__blank">
+          <a href="https://www.linkedin.com/in/web3-engineer/" target="__blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a href="https://github.com/affankhan43"  target="__blank">
