--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <p class="lead mb-5">
 		
-		Hi, I'm Affan — a 22 years old young Blockchain & Backend Engineer with 6+ Years of Experience. <br><br>
+		Hi, I'm Affan — a young Blockchain & Backend Engineer with 6+ Years of Experience. <br><br>
 
 		I'm a passionate Full Stack Blockchain Engineer with 6+ years of experience building scalable backend systems, secure smart contracts, and production-ready SaaS platforms. I specialize in architecting decentralized applications (dApps), integrating Web3 protocols, and bridging blockchain networks with real-world financial systems. <br><br>
 		
